frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aci-frontend
  namespace: ${NAMESPACE}
  labels:
    app: aci-frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: aci-frontend
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
